examples/_legacy/aws-GitHubActions/sre-iac-starter-aws/sre-iac-starter-aws/envs/aws/modules/ec2-docker-vm/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

resource "aws_security_group" "ssh_http" {
  name        = "${var.name}-sg"
  description = "Allow SSH(22) and HTTP(80)"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.ssh_cidrs
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.tags, { Name = "${var.name}-sg" })
}

resource "aws_instance" "vm" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  subnet_id                   = var.subnet_id
  vpc_security_group_ids      = [aws_security_group.ssh_http.id]
  associate_public_ip_address = true
  user_data                   = templatefile("${path.module}/user_data.tpl", {})

  tags = merge(var.tags, { Name = var.name })
}

output "public_ip" {
  value = aws_instance.vm.public_ip
}
